--- a/src/components/calendar/main.scss
+++ b/src/components/calendar/main.scss
@@ -1,4 +1,3 @@
-
 @import '~@fullcalendar/core/main.css';
 @import '~@fullcalendar/daygrid/main.css';
 @import '~@fullcalendar/timegrid/main.css';
@@ -6,6 +5,8 @@
 
 .MuiFormGroup-root{
   margin-bottom: 20px;
+  background-color: #cdcdcd;
+
 }
 .fc-time-grid .fc-slats td {
   height: 65px;}
@@ -22,6 +23,7 @@
     margin: 0;
     line-height: 1.1;
     color: #484848;
+    //color: #c0c0c0;
   }
 }
 .fc-event{
