--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,19 @@
-$body-color: white;
+@import 'styles/reset';
 
-body {
-  background-color: $body-color;
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.footer{
+  margin-top: auto;
+  background-color: #3f51b5;
+  color: white;
+  min-height: 50px;
+
+}
+
+.nav_list {
+  width: 250px;
 }
